--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -1139,7 +1139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
+   "id": "19077f20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interactions = pd.read_parquet(\"interactions.parquet\")\n",
+    "books = pd.read_parquet(\"books.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "id": "a97795e4-652c-4d87-a2c8-01d7756ee9af",
    "metadata": {},
    "outputs": [],
@@ -1150,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 59,
    "id": "d44de218-ed47-4b12-aef8-c0161f356002",
    "metadata": {},
    "outputs": [],
@@ -1161,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "id": "2802d95e-314e-4802-851d-bb5d04e5c84b",
    "metadata": {},
    "outputs": [],
@@ -1175,14 +1186,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce75ec96-1309-441d-802f-d60a584d4546",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "9fb82342-c874-495f-8c0f-e2c6c1b68e2d",
    "metadata": {},
@@ -1192,11 +1195,327 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "4e465d92-e2c9-4b29-9fa6-de97ec1052ac",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "events.drop(\n",
+    "    index=events[events[\"rating\"] == 0].index, axis=0, inplace=True, errors=\"ignore\"\n",
+    ")\n",
+    "\n",
+    "\n",
+    "events.drop(\n",
+    "    index=events[events[\"is_read\"] == False].index,\n",
+    "    axis=0,\n",
+    "    inplace=True,\n",
+    "    errors=\"ignore\",\n",
+    ")\n",
+    "\n",
+    "users_read_counts = events.groupby(\"user_id\").size().reset_index(name=\"count\")\n",
+    "\n",
+    "users_read_counts_filter = users_read_counts.drop(\n",
+    "    index=users_read_counts[users_read_counts[\"count\"] < 2].index, axis=0\n",
+    ")[\"user_id\"].to_list()\n",
+    "\n",
+    "users_deleted_index = events[~events[\"user_id\"].isin(users_read_counts_filter)].index\n",
+    "\n",
+    "events.drop(\n",
+    "    index=users_deleted_index,\n",
+    "    axis=0,\n",
+    "    inplace=True,\n",
+    "    errors=\"ignore\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "648450f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>book_id</th>\n",
+       "      <th>started_at</th>\n",
+       "      <th>read_at</th>\n",
+       "      <th>is_read</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>is_reviewed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8842281e1d1347389f2ab93d60773d4d</td>\n",
+       "      <td>22034</td>\n",
+       "      <td>2015-07-12</td>\n",
+       "      <td>2015-07-17</td>\n",
+       "      <td>True</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8842281e1d1347389f2ab93d60773d4d</td>\n",
+       "      <td>22318578</td>\n",
+       "      <td>2015-06-07</td>\n",
+       "      <td>2015-08-09</td>\n",
+       "      <td>True</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8842281e1d1347389f2ab93d60773d4d</td>\n",
+       "      <td>22551730</td>\n",
+       "      <td>2015-06-24</td>\n",
+       "      <td>2015-07-11</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8842281e1d1347389f2ab93d60773d4d</td>\n",
+       "      <td>22816087</td>\n",
+       "      <td>2015-09-27</td>\n",
+       "      <td>2015-11-04</td>\n",
+       "      <td>True</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>8842281e1d1347389f2ab93d60773d4d</td>\n",
+       "      <td>17910054</td>\n",
+       "      <td>2015-03-04</td>\n",
+       "      <td>2015-07-28</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12914452</th>\n",
+       "      <td>d890e8079d8896e0cc6c4f178634850a</td>\n",
+       "      <td>5297</td>\n",
+       "      <td>2017-02-07</td>\n",
+       "      <td>2017-02-26</td>\n",
+       "      <td>True</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12914453</th>\n",
+       "      <td>d890e8079d8896e0cc6c4f178634850a</td>\n",
+       "      <td>4900</td>\n",
+       "      <td>2016-12-22</td>\n",
+       "      <td>2016-12-29</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12914454</th>\n",
+       "      <td>d890e8079d8896e0cc6c4f178634850a</td>\n",
+       "      <td>14836</td>\n",
+       "      <td>2016-11-29</td>\n",
+       "      <td>2017-01-15</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12914456</th>\n",
+       "      <td>b0883ebf8e31731f1c5d91e678c26666</td>\n",
+       "      <td>10210</td>\n",
+       "      <td>2012-06-05</td>\n",
+       "      <td>2013-01-17</td>\n",
+       "      <td>True</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12914457</th>\n",
+       "      <td>b0883ebf8e31731f1c5d91e678c26666</td>\n",
+       "      <td>99561</td>\n",
+       "      <td>2012-07-21</td>\n",
+       "      <td>2012-07-22</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>11751086 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   user_id   book_id  started_at     read_at  \\\n",
+       "0         8842281e1d1347389f2ab93d60773d4d     22034  2015-07-12  2015-07-17   \n",
+       "1         8842281e1d1347389f2ab93d60773d4d  22318578  2015-06-07  2015-08-09   \n",
+       "2         8842281e1d1347389f2ab93d60773d4d  22551730  2015-06-24  2015-07-11   \n",
+       "3         8842281e1d1347389f2ab93d60773d4d  22816087  2015-09-27  2015-11-04   \n",
+       "5         8842281e1d1347389f2ab93d60773d4d  17910054  2015-03-04  2015-07-28   \n",
+       "...                                    ...       ...         ...         ...   \n",
+       "12914452  d890e8079d8896e0cc6c4f178634850a      5297  2017-02-07  2017-02-26   \n",
+       "12914453  d890e8079d8896e0cc6c4f178634850a      4900  2016-12-22  2016-12-29   \n",
+       "12914454  d890e8079d8896e0cc6c4f178634850a     14836  2016-11-29  2017-01-15   \n",
+       "12914456  b0883ebf8e31731f1c5d91e678c26666     10210  2012-06-05  2013-01-17   \n",
+       "12914457  b0883ebf8e31731f1c5d91e678c26666     99561  2012-07-21  2012-07-22   \n",
+       "\n",
+       "          is_read  rating  is_reviewed  \n",
+       "0            True       5        False  \n",
+       "1            True       5         True  \n",
+       "2            True       4         True  \n",
+       "3            True       5         True  \n",
+       "5            True       3        False  \n",
+       "...           ...     ...          ...  \n",
+       "12914452     True       5        False  \n",
+       "12914453     True       2        False  \n",
+       "12914454     True       3        False  \n",
+       "12914456     True       5        False  \n",
+       "12914457     True       4        False  \n",
+       "\n",
+       "[11751086 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "22001ba5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9116129061286843\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(11751086 / interactions.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "48a5538d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>book_id</th>\n",
+       "      <th>started_at</th>\n",
+       "      <th>read_at</th>\n",
+       "      <th>is_read</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>is_reviewed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10841363</th>\n",
+       "      <td>8f50136afeb65c55cec7b3d306c24b03</td>\n",
+       "      <td>253058</td>\n",
+       "      <td>2012-12-29</td>\n",
+       "      <td>2013-01-22</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10841364</th>\n",
+       "      <td>8f50136afeb65c55cec7b3d306c24b03</td>\n",
+       "      <td>10572</td>\n",
+       "      <td>2012-01-02</td>\n",
+       "      <td>2013-01-27</td>\n",
+       "      <td>True</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   user_id  book_id  started_at     read_at  \\\n",
+       "10841363  8f50136afeb65c55cec7b3d306c24b03   253058  2012-12-29  2013-01-22   \n",
+       "10841364  8f50136afeb65c55cec7b3d306c24b03    10572  2012-01-02  2013-01-27   \n",
+       "\n",
+       "          is_read  rating  is_reviewed  \n",
+       "10841363     True       3         True  \n",
+       "10841364     True       5        False  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interactions[interactions[\"user_id\"] == \"8f50136afeb65c55cec7b3d306c24b03\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1208,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 66,
    "id": "5281284b-2574-43ca-8ddc-e8f1b2e4cac6",
    "metadata": {},
    "outputs": [],
@@ -1218,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "id": "b6579a5d-c7b7-4785-abd8-69f63f48151d",
    "metadata": {},
    "outputs": [],
