--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 85,
    "id": "19077f20",
    "metadata": {},
    "outputs": [],
@@ -1547,11 +1547,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "15fa321c-a44c-4e1d-869d-270afba261d0",
+   "execution_count": 2,
+   "id": "97fc011e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "dd08bc29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items = pd.read_parquet(\"items.par\")\n",
+    "events = pd.read_parquet(\"events.par\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "15fa321c-a44c-4e1d-869d-270afba261d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "428220 123223 120858\n"
+     ]
+    }
+   ],
+   "source": [
+    "# зададим точку разбиения\n",
+    "train_test_global_time_split_date = pd.to_datetime(\"2017-08-01\").date()\n",
+    "\n",
+    "events_train = events[events[\"started_at\"] < train_test_global_time_split_date]\n",
+    "events_test = events[events[\"started_at\"] >= train_test_global_time_split_date]\n",
+    "\n",
+    "\n",
+    "# # количество пользователей в train и test\n",
+    "users_train = events_train[\"user_id\"].drop_duplicates()\n",
+    "users_test = events_test[\"user_id\"].drop_duplicates()\n",
+    "# # количество пользователей, которые есть и в train, и в test\n",
+    "common_users = users_train[users_train.isin(users_test)].unique()\n",
+    "\n",
+    "print(len(users_train), len(users_test), len(common_users))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "10abcc98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120858\n"
+     ]
+    }
+   ],
+   "source": [
+    "cold_users = common_users\n",
+    "\n",
+    "print(len(cold_users))"
+   ]
   }
  ],
  "metadata": {
