--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -1139,18 +1139,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "id": "19077f20",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
     "interactions = pd.read_parquet(\"interactions.parquet\")\n",
     "books = pd.read_parquet(\"books.parquet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "id": "a97795e4-652c-4d87-a2c8-01d7756ee9af",
    "metadata": {},
    "outputs": [],
@@ -1161,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "id": "d44de218-ed47-4b12-aef8-c0161f356002",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "id": "2802d95e-314e-4802-851d-bb5d04e5c84b",
    "metadata": {},
    "outputs": [],
@@ -1195,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "id": "4e465d92-e2c9-4b29-9fa6-de97ec1052ac",
    "metadata": {},
    "outputs": [],
@@ -1547,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "97fc011e",
    "metadata": {},
    "outputs": [],
@@ -1557,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "dd08bc29",
    "metadata": {},
    "outputs": [],
@@ -1568,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "15fa321c-a44c-4e1d-869d-270afba261d0",
    "metadata": {},
    "outputs": [
@@ -1599,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "10abcc98",
    "metadata": {},
    "outputs": [
@@ -1607,14 +1610,448 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "120858\n"
+      "123223 428220\n"
      ]
     }
    ],
    "source": [
     "cold_users = common_users\n",
     "\n",
-    "print(len(cold_users))"
+    "print(len(users_test), len(users_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "518eef3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>book_id</th>\n",
+       "      <th>started_at</th>\n",
+       "      <th>read_at</th>\n",
+       "      <th>is_read</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>is_reviewed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8842281e1d1347389f2ab93d60773d4d</td>\n",
+       "      <td>22034</td>\n",
+       "      <td>2015-07-12</td>\n",
+       "      <td>2015-07-17</td>\n",
+       "      <td>True</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8842281e1d1347389f2ab93d60773d4d</td>\n",
+       "      <td>22318578</td>\n",
+       "      <td>2015-06-07</td>\n",
+       "      <td>2015-08-09</td>\n",
+       "      <td>True</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8842281e1d1347389f2ab93d60773d4d</td>\n",
+       "      <td>22551730</td>\n",
+       "      <td>2015-06-24</td>\n",
+       "      <td>2015-07-11</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8842281e1d1347389f2ab93d60773d4d</td>\n",
+       "      <td>22816087</td>\n",
+       "      <td>2015-09-27</td>\n",
+       "      <td>2015-11-04</td>\n",
+       "      <td>True</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>8842281e1d1347389f2ab93d60773d4d</td>\n",
+       "      <td>17910054</td>\n",
+       "      <td>2015-03-04</td>\n",
+       "      <td>2015-07-28</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            user_id   book_id  started_at     read_at  \\\n",
+       "0  8842281e1d1347389f2ab93d60773d4d     22034  2015-07-12  2015-07-17   \n",
+       "1  8842281e1d1347389f2ab93d60773d4d  22318578  2015-06-07  2015-08-09   \n",
+       "2  8842281e1d1347389f2ab93d60773d4d  22551730  2015-06-24  2015-07-11   \n",
+       "3  8842281e1d1347389f2ab93d60773d4d  22816087  2015-09-27  2015-11-04   \n",
+       "5  8842281e1d1347389f2ab93d60773d4d  17910054  2015-03-04  2015-07-28   \n",
+       "\n",
+       "   is_read  rating  is_reviewed  \n",
+       "0     True       5        False  \n",
+       "1     True       5         True  \n",
+       "2     True       4         True  \n",
+       "3     True       5         True  \n",
+       "5     True       3        False  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b9763d3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>book_id</th>\n",
+       "      <th>users</th>\n",
+       "      <th>avg_rating</th>\n",
+       "      <th>users_norm</th>\n",
+       "      <th>avg_rating_norm</th>\n",
+       "      <th>popularity_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>35011</th>\n",
+       "      <td>22557272</td>\n",
+       "      <td>40690</td>\n",
+       "      <td>3.788965</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.697241</td>\n",
+       "      <td>0.697241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37701</th>\n",
+       "      <td>29056083</td>\n",
+       "      <td>25785</td>\n",
+       "      <td>3.801784</td>\n",
+       "      <td>0.633685</td>\n",
+       "      <td>0.700446</td>\n",
+       "      <td>0.443862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32387</th>\n",
+       "      <td>18007564</td>\n",
+       "      <td>20207</td>\n",
+       "      <td>4.321275</td>\n",
+       "      <td>0.496596</td>\n",
+       "      <td>0.830319</td>\n",
+       "      <td>0.412333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32623</th>\n",
+       "      <td>18143977</td>\n",
+       "      <td>19462</td>\n",
+       "      <td>4.290669</td>\n",
+       "      <td>0.478287</td>\n",
+       "      <td>0.822667</td>\n",
+       "      <td>0.393471</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>15139</td>\n",
+       "      <td>4.706057</td>\n",
+       "      <td>0.372042</td>\n",
+       "      <td>0.926514</td>\n",
+       "      <td>0.344702</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32073</th>\n",
+       "      <td>17802724</td>\n",
+       "      <td>6202</td>\n",
+       "      <td>3.811996</td>\n",
+       "      <td>0.152400</td>\n",
+       "      <td>0.702999</td>\n",
+       "      <td>0.107137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37008</th>\n",
+       "      <td>26074181</td>\n",
+       "      <td>6344</td>\n",
+       "      <td>3.727932</td>\n",
+       "      <td>0.155890</td>\n",
+       "      <td>0.681983</td>\n",
+       "      <td>0.106314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35980</th>\n",
+       "      <td>23848559</td>\n",
+       "      <td>5592</td>\n",
+       "      <td>4.065629</td>\n",
+       "      <td>0.137408</td>\n",
+       "      <td>0.766407</td>\n",
+       "      <td>0.105311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26024</th>\n",
+       "      <td>10025305</td>\n",
+       "      <td>4900</td>\n",
+       "      <td>4.491224</td>\n",
+       "      <td>0.120401</td>\n",
+       "      <td>0.872806</td>\n",
+       "      <td>0.105087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25134</th>\n",
+       "      <td>8755785</td>\n",
+       "      <td>4933</td>\n",
+       "      <td>4.461788</td>\n",
+       "      <td>0.121212</td>\n",
+       "      <td>0.865447</td>\n",
+       "      <td>0.104903</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        book_id  users  avg_rating  users_norm  avg_rating_norm  \\\n",
+       "35011  22557272  40690    3.788965    1.000000         0.697241   \n",
+       "37701  29056083  25785    3.801784    0.633685         0.700446   \n",
+       "32387  18007564  20207    4.321275    0.496596         0.830319   \n",
+       "32623  18143977  19462    4.290669    0.478287         0.822667   \n",
+       "2             3  15139    4.706057    0.372042         0.926514   \n",
+       "...         ...    ...         ...         ...              ...   \n",
+       "32073  17802724   6202    3.811996    0.152400         0.702999   \n",
+       "37008  26074181   6344    3.727932    0.155890         0.681983   \n",
+       "35980  23848559   5592    4.065629    0.137408         0.766407   \n",
+       "26024  10025305   4900    4.491224    0.120401         0.872806   \n",
+       "25134   8755785   4933    4.461788    0.121212         0.865447   \n",
+       "\n",
+       "       popularity_score  \n",
+       "35011          0.697241  \n",
+       "37701          0.443862  \n",
+       "32387          0.412333  \n",
+       "32623          0.393471  \n",
+       "2              0.344702  \n",
+       "...                 ...  \n",
+       "32073          0.107137  \n",
+       "37008          0.106314  \n",
+       "35980          0.105311  \n",
+       "26024          0.105087  \n",
+       "25134          0.104903  \n",
+       "\n",
+       "[100 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "top_pop_start_date = pd.to_datetime(\"2015-01-01\").date()\n",
+    "\n",
+    "item_popularity = (\n",
+    "    events_train.query(\"started_at >= @top_pop_start_date\")\n",
+    "    .groupby([\"book_id\"])\n",
+    "    .agg(users=(\"user_id\", \"nunique\"), avg_rating=(\"rating\", \"mean\"))\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "# нормализация пользователей и среднего рейтинга, требуется для их приведения к одному масштабу\n",
+    "scaler = MinMaxScaler()\n",
+    "item_popularity[[\"users_norm\", \"avg_rating_norm\"]] = scaler.fit_transform(\n",
+    "    item_popularity[[\"users\", \"avg_rating\"]]\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# вычисляем popularity_score, как скор популярности со штрафом за низкий рейтинг\n",
+    "item_popularity[\"popularity_score\"] = (\n",
+    "    item_popularity[\"users_norm\"] * item_popularity[\"avg_rating_norm\"]\n",
+    ")\n",
+    "\n",
+    "# сортируем по убыванию popularity_score\n",
+    "item_popularity = item_popularity.sort_values(by=[\"popularity_score\"], ascending=False)\n",
+    "\n",
+    "# выбираем первые 100 айтемов со средней оценкой avg_rating не меньше 4\n",
+    "top_k_pop_items = item_popularity.head(100)\n",
+    "\n",
+    "top_k_pop_items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94b25d3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# добавляем информацию о книгах\n",
+    "top_k_pop_items = top_k_pop_items.merge(\n",
+    "    items.set_index(\"book_id\")[\n",
+    "        [\"author\", \"title\", \"genre_and_votes\", \"publication_year\"]\n",
+    "    ],\n",
+    "    on=\"book_id\",\n",
+    ")\n",
+    "\n",
+    "with pd.option_context(\"display.max_rows\", 100):\n",
+    "    display(\n",
+    "        top_k_pop_items[\n",
+    "            [\n",
+    "                \"book_id\",\n",
+    "                \"author\",\n",
+    "                \"title\",\n",
+    "                \"publication_year\",\n",
+    "                \"users\",\n",
+    "                \"avg_rating\",\n",
+    "                \"popularity_score\",\n",
+    "                \"genre_and_votes\",\n",
+    "            ]\n",
+    "        ]\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a3996035",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['user_id', 'book_id', 'started_at', 'read_at', 'is_read', 'rating',\n",
+      "       'is_reviewed'],\n",
+      "      dtype='object')\n",
+      "Index(['book_id', 'users', 'avg_rating', 'users_norm', 'avg_rating_norm',\n",
+      "       'popularity_score', 'author', 'title', 'genre_and_votes',\n",
+      "       'publication_year'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(events_test.columns)\n",
+    "print(top_k_pop_items.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d0fb1fe0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cold_users_events_with_recs = events_test[\n",
+    "    events_test[\"user_id\"].isin(cold_users)\n",
+    "].merge(top_k_pop_items.set_index(\"book_id\")[\"avg_rating\"], on=\"book_id\", how=\"left\")\n",
+    "\n",
+    "cold_user_items_no_avg_rating_idx = cold_users_events_with_recs[\"avg_rating\"].isnull()\n",
+    "cold_user_recs = cold_users_events_with_recs[~cold_user_items_no_avg_rating_idx][\n",
+    "    [\"user_id\", \"book_id\", \"rating\", \"avg_rating\"]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d7f4a9eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.12677839430349067"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cold_user_recs.shape[0] / events_test.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6990712b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # посчитаем метрики рекомендаций\n",
+    "# from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "\n",
+    "# rmse = mean_squared_error(cold_user_recs[\"rating\"], cold_user_recs[\"avg_rating\"], squared=False)\n",
+    "# mae = # ваш код здесь #\n",
+    "# print(round(rmse, 2), round(mae, 2))"
    ]
   }
  ],
