--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2041,17 +2041,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "6990712b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.81 0.64\n"
+     ]
+    }
+   ],
    "source": [
     "# # посчитаем метрики рекомендаций\n",
-    "# from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
     "\n",
-    "# rmse = mean_squared_error(cold_user_recs[\"rating\"], cold_user_recs[\"avg_rating\"], squared=False)\n",
-    "# mae = # ваш код здесь #\n",
-    "# print(round(rmse, 2), round(mae, 2))"
+    "rmse = mean_squared_error(\n",
+    "    cold_user_recs[\"rating\"], cold_user_recs[\"avg_rating\"], squared=False\n",
+    ")\n",
+    "mae = mean_absolute_error(cold_user_recs[\"rating\"], cold_user_recs[\"avg_rating\"])\n",
+    "print(round(rmse, 2), round(mae, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "abadebcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Доля пользователей без релевантных рекомендаций: 0.72\n",
+      "Среднее покрытие пользователей: 0.47\n"
+     ]
+    }
+   ],
+   "source": [
+    "# посчитаем покрытие холодных пользователей рекомендациями\n",
+    "\n",
+    "cold_users_hit_ratio = cold_users_events_with_recs.groupby(\"user_id\").agg(\n",
+    "    hits=(\"avg_rating\", lambda x: (~x.isnull()).mean())\n",
+    ")\n",
+    "\n",
+    "print(\n",
+    "    f\"Доля пользователей без релевантных рекомендаций: {(cold_users_hit_ratio == 0).mean().iat[0]:.2f}\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"Среднее покрытие пользователей: {cold_users_hit_ratio[cold_users_hit_ratio != 0].mean().iat[0]:.2f}\"\n",
+    ")"
    ]
   }
  ],
