feature: Двухстадийный подход: метрики

--- a/main_offline.ipynb
+++ b/main_offline.ipynb
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "eef6db39",
    "metadata": {},
    "outputs": [],
@@ -412,13 +412,13 @@
     "    genres_csr_row_idx = []\n",
     "    genres_csr_col_idx = []\n",
     "\n",
-    "    for item_idx, (k, v) in enumerate(items.iterrows()):\n",
+    "    for book_idx, (k, v) in enumerate(items.iterrows()):\n",
     "        if v[\"genre_and_votes\"] is None:\n",
     "            continue\n",
     "        for genre_name, votes in v[\"genre_and_votes\"].items():\n",
     "            genre_idx = genre_names_to_id[genre_name]\n",
     "            genres_csr_data.append(int(votes))\n",
-    "            genres_csr_row_idx.append(item_idx)\n",
+    "            genres_csr_row_idx.append(book_idx)\n",
     "            genres_csr_col_idx.append(genre_idx)\n",
     "\n",
     "    genres_csr = scipy.sparse.csr_matrix(\n",
@@ -923,27 +923,344 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "05850eab-168a-4338-8692-cd1a8fefb685",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def process_events_recs_for_binary_metrics(events_train, events_test, recs, top_k=None):\n",
+    "    \"\"\"\n",
+    "    размечает пары <user_id, book_id> для общего множества пользователей признаками\n",
+    "    - gt (ground truth)\n",
+    "    - pr (prediction)\n",
+    "    top_k: расчёт ведётся только для top k-рекомендаций\n",
+    "    \"\"\"\n",
+    "\n",
+    "    events_test[\"gt\"] = True\n",
+    "    common_users = set(events_test[\"user_id\"]) & set(recs[\"user_id\"])\n",
+    "\n",
+    "    print(f\"Common users: {len(common_users)}\")\n",
+    "\n",
+    "    events_for_common_users = events_test[\n",
+    "        events_test[\"user_id\"].isin(common_users)\n",
+    "    ].copy()\n",
+    "    recs_for_common_users = recs[recs[\"user_id\"].isin(common_users)].copy()\n",
+    "\n",
+    "    recs_for_common_users = recs_for_common_users.sort_values(\n",
+    "        [\"user_id\", \"score\"], ascending=[True, False]\n",
+    "    )\n",
+    "\n",
+    "    # оставляет только те book_id, которые были в events_train,\n",
+    "    # т. к. модель не имела никакой возможности давать рекомендации для новых айтемов\n",
+    "    events_for_common_users = events_for_common_users[\n",
+    "        events_for_common_users[\"book_id\"].isin(events_train[\"book_id\"].unique())\n",
+    "    ]\n",
+    "\n",
+    "    if top_k is not None:\n",
+    "        recs_for_common_users = recs_for_common_users.groupby(\"user_id\").head(top_k)\n",
+    "\n",
+    "    events_recs_common = events_for_common_users[[\"user_id\", \"book_id\", \"gt\"]].merge(\n",
+    "        recs_for_common_users[[\"user_id\", \"book_id\", \"score\"]],\n",
+    "        on=[\"user_id\", \"book_id\"],\n",
+    "        how=\"outer\",\n",
+    "    )\n",
+    "\n",
+    "    events_recs_common[\"gt\"] = events_recs_common[\"gt\"].fillna(False)\n",
+    "    events_recs_common[\"pr\"] = ~events_recs_common[\"score\"].isnull()\n",
+    "\n",
+    "    events_recs_common[\"tp\"] = events_recs_common[\"gt\"] & events_recs_common[\"pr\"]\n",
+    "    events_recs_common[\"fp\"] = ~events_recs_common[\"gt\"] & events_recs_common[\"pr\"]\n",
+    "    events_recs_common[\"fn\"] = events_recs_common[\"gt\"] & ~events_recs_common[\"pr\"]\n",
+    "\n",
+    "    return events_recs_common"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "28f429e6-b9da-4231-afba-25dd8e606a23",
+   "execution_count": 101,
+   "id": "410e4ec3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "als_recommendations = pd.read_parquet(\"als_recommendations.parquet\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
+   "id": "28f429e6-b9da-4231-afba-25dd8e606a23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_8117/232892459.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  events_test[\"gt\"] = True\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Common users: 123223\n"
+     ]
+    }
+   ],
+   "source": [
+    "events_recs_for_binary_metrics = process_events_recs_for_binary_metrics(\n",
+    "    events_train, events_test, als_recommendations, top_k=5\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "4dff871d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>book_id</th>\n",
+       "      <th>gt</th>\n",
+       "      <th>score</th>\n",
+       "      <th>pr</th>\n",
+       "      <th>tp</th>\n",
+       "      <th>fp</th>\n",
+       "      <th>fn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7504b2aee1ecb5b2872d3da381c6c91e</td>\n",
+       "      <td>18467802</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>704eb93a316aff687a93d5215882eb21</td>\n",
+       "      <td>10799</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>012515e5802b2e0f42915118c90fa04b</td>\n",
+       "      <td>13206828</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>012515e5802b2e0f42915118c90fa04b</td>\n",
+       "      <td>13206900</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>012515e5802b2e0f42915118c90fa04b</td>\n",
+       "      <td>13206760</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1030163</th>\n",
+       "      <td>fffff8a718843c0e11dfd93fb41c1297</td>\n",
+       "      <td>29056083</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.472951</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1030164</th>\n",
+       "      <td>fffff8a718843c0e11dfd93fb41c1297</td>\n",
+       "      <td>17167166</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.463938</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1030165</th>\n",
+       "      <td>fffff8a718843c0e11dfd93fb41c1297</td>\n",
+       "      <td>17927395</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.460431</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1030166</th>\n",
+       "      <td>fffff8a718843c0e11dfd93fb41c1297</td>\n",
+       "      <td>16096824</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.454711</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1030167</th>\n",
+       "      <td>fffff8a718843c0e11dfd93fb41c1297</td>\n",
+       "      <td>20613470</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.445637</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1030168 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  user_id   book_id     gt     score     pr  \\\n",
+       "0        7504b2aee1ecb5b2872d3da381c6c91e  18467802   True       NaN  False   \n",
+       "1        704eb93a316aff687a93d5215882eb21     10799   True       NaN  False   \n",
+       "2        012515e5802b2e0f42915118c90fa04b  13206828   True       NaN  False   \n",
+       "3        012515e5802b2e0f42915118c90fa04b  13206900   True       NaN  False   \n",
+       "4        012515e5802b2e0f42915118c90fa04b  13206760   True       NaN  False   \n",
+       "...                                   ...       ...    ...       ...    ...   \n",
+       "1030163  fffff8a718843c0e11dfd93fb41c1297  29056083  False  0.472951   True   \n",
+       "1030164  fffff8a718843c0e11dfd93fb41c1297  17167166  False  0.463938   True   \n",
+       "1030165  fffff8a718843c0e11dfd93fb41c1297  17927395  False  0.460431   True   \n",
+       "1030166  fffff8a718843c0e11dfd93fb41c1297  16096824  False  0.454711   True   \n",
+       "1030167  fffff8a718843c0e11dfd93fb41c1297  20613470  False  0.445637   True   \n",
+       "\n",
+       "            tp     fp     fn  \n",
+       "0        False  False   True  \n",
+       "1        False  False   True  \n",
+       "2        False  False   True  \n",
+       "3        False  False   True  \n",
+       "4        False  False   True  \n",
+       "...        ...    ...    ...  \n",
+       "1030163  False   True  False  \n",
+       "1030164  False   True  False  \n",
+       "1030165  False   True  False  \n",
+       "1030166  False   True  False  \n",
+       "1030167  False   True  False  \n",
+       "\n",
+       "[1030168 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events_recs_for_binary_metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "id": "b4e4509b-6289-4ad6-a767-cbb2ace791ee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def compute_cls_metrics(events_recs_for_binary_metric):\n",
+    "    groupper = events_recs_for_binary_metric.groupby(\"user_id\")\n",
+    "\n",
+    "    # precision = tp / (tp + fp)\n",
+    "    precision = groupper[\"tp\"].sum() / (groupper[\"tp\"].sum() + groupper[\"fp\"].sum())\n",
+    "    precision = precision.fillna(0).mean()\n",
+    "\n",
+    "    # recall = tp / (tp + fn)\n",
+    "    recall = groupper[\"tp\"].sum() / (groupper[\"tp\"].sum() + groupper[\"fn\"].sum())\n",
+    "    recall = recall.fillna(0).mean()\n",
+    "    return precision, recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "b3bbf579",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.007581376853347184\n",
+      "0.014121568795222568\n"
+     ]
+    }
+   ],
+   "source": [
+    "precision, recall = compute_cls_metrics(events_recs_for_binary_metrics)\n",
+    "\n",
+    "print(precision)\n",
+    "print(recall)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -955,27 +1272,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "2a4cf639-1afa-4e89-8ba5-eee48a1bd0e1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# расчёт покрытия по объектам\n",
+    "cov_items = als_recommendations[\"book_id\"].nunique() / events_train[\"book_id\"].nunique()\n",
+    "print(f\"{cov_items:.2f}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "id": "48e4d676-ede1-4725-8e31-457ebc0452da",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d99db2ab-231d-4cf8-8221-5e00e9e6e4c0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_8117/382863968.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  events_train[\"read\"] = True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8980405727092211"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# разметим каждую рекомендацию признаком read\n",
+    "events_train[\"read\"] = True\n",
+    "als_recommendations = als_recommendations.merge(\n",
+    "    events_train, on=[\"user_id\", \"book_id\"], how=\"left\"\n",
+    ")\n",
+    "als_recommendations[\"read\"] = als_recommendations[\"read\"].fillna(False).astype(\"bool\")\n",
+    "\n",
+    "# проставим ранги\n",
+    "als_recommendations = als_recommendations.sort_values(by=\"book_id\")\n",
+    "als_recommendations[\"rank\"] = als_recommendations.groupby(\"user_id\").cumcount() + 1\n",
+    "\n",
+    "# посчитаем novelty по пользователям\n",
+    "novelty_5 = 1 - als_recommendations.query(\"rank <= 5\").groupby(\"user_id\")[\"read\"].mean()\n",
+    "\n",
+    "# посчитаем средний novelty\n",
+    "novelty_5.mean()"
+   ]
   },
   {
    "cell_type": "markdown",
